--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,24 +1,23 @@
-<mat-card class="example-card">
+<mat-card>
   <mat-card-header>
-    <mat-card-title>Ha Eun Kim</mat-card-title>
-    <mat-card-subtitle> Seneca College </mat-card-subtitle>
+    <mat-card-title>Haeun Kim</mat-card-title>
+    <mat-card-subtitle
+      >Computer Programming & Analysis at Seneca</mat-card-subtitle
+    >
   </mat-card-header>
-  <img
-    mat-card-image
-    src="https://material.angular.io/assets/img/examples/shiba2.jpg"
-    alt="Photo of a Shiba Inu"
-  />
+
+  <div mat-card-image></div>
   <mat-card-content>
-    <p>Hello, this is Ha Eun Kim studying 4th semester in seneca college.</p>
+    <p>
+      Hello, this is Ha Eun Kim studying computer programming at seneca. I am
+      currently in the fourth semester at Seneca College. <br />I love working
+      with people to design and create applications with different technologies
+      that can inspire others.
+    </p>
+    <p>
+      I want to become a Tester/Deveoper which i can expand my abilities to
+      design and implement various applications which can create a positive
+      influence on our society.
+    </p>
   </mat-card-content>
-
-  <mat-card-actions>
-    <button mat-button style="background-color: blue; color: white">
-      LIKE
-    </button>
-
-    <button mat-button style="background-color: green; color: white">
-      SHARE
-    </button>
-  </mat-card-actions>
 </mat-card>
