--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -9,13 +9,18 @@
   <div mat-card-image></div>
   <mat-card-content>
     <p>
-      Hello, this is Ha Eun Kim studying computer programming at seneca. I am
-      currently in the fourth semester at Seneca College. <br />I love working
-      with people to design and create applications with different technologies
-      that can inspire others.
+      Hello, this is Ha Eun Kim studying computer programming at Seneca. I am
+      currently in the 4th semester at Seneca College. <br />I love working with
+      people as a team to design and create applications with different
+      technologies that can inspire others. <br />
+      I worked at Alpha Labs as a Software developer co-op, this experience
+      makes me to invlove in working as a software tester as well. <br />I
+      mostly did automation testing with Java Junit framework, this opportunity
+      gives me to a lot of motivation to work on real project that are going be
+      released soon to people to help them with techology in the world
     </p>
     <p>
-      I want to become a Tester/Deveoper which i can expand my abilities to
+      I want to become a Tester/Deveoper which I can expand my abilities to
       design and implement various applications which can create a positive
       influence on our society.
     </p>
