--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,7 +14,7 @@
 
     <button mat-button [matMenuTriggerFor]="userMenu">
       <mat-icon>person</mat-icon>
-      <span fxShow fxHide.xs> John Doe </span>
+      <span fxShow fxHide.xs> Haeun Kim </span>
     </button>
     <mat-menu
       #userMenu="matMenu"
