--- a/src/app/album/album.component.html
+++ b/src/app/album/album.component.html
@@ -21,12 +21,9 @@
         <strong>Popularity: </strong>{{ album.popularity }}<br /><br />
 
         <mat-chip-list aria-label="Artist selection">
-          <mat-chip
-            *ngFor="let artist of album.artists"
-            [routerLink]="['/artist', artist.id]"
-            >{{ artist.name }}</mat-chip
-          >
-          <!-- <mat-chip>Possible Second Artist</mat-chip> -->
+          <mat-chip *ngFor="let artist of album.artists" routerLink="/artist">
+            {{ artist.name }}
+          </mat-chip>
         </mat-chip-list>
         <br />
 
