--- a/src/app/new-releases/new-releases.component.html
+++ b/src/app/new-releases/new-releases.component.html
@@ -18,7 +18,7 @@
           class="album-cover"
           src="{{ release.images[0].url }}"
           alt="album art"
-          [routerLink]="['/album', release.id]"
+          routerLink="/album"
         />
 
         <strong>Release Date: </strong>{{ release.release_date | date: "M/d/yy"
@@ -26,10 +26,7 @@
         <strong>Tracks: </strong>{{ release.total_tracks }}<br /><br />
         <mat-card-content *ngFor="let artist of release.artists">
           <mat-chip-list aria-label="Artist selection">
-            <mat-chip [routerLink]="['/artist', artist.id]">{{
-              artist.name
-            }}</mat-chip>
-            <!-- <mat-chip>Possible Second Artist</mat-chip> -->
+            <mat-chip routerLink="/artist">{{ artist.name }}</mat-chip>
           </mat-chip-list>
         </mat-card-content>
       </mat-card>
