--- a/src/app/new-releases/new-releases.component.html
+++ b/src/app/new-releases/new-releases.component.html
@@ -1,36 +1,36 @@
-<h1>New Release</h1>
-<h3>
+<h1>New Releases</h1>
+<p>
   The following is a list of new releases. <br />Click the <b>album cover</b
   > or <b>artist name</b> for more information.
-</h3>
-<div class="content">
-  <div fxLayout="row wrap" fxLayout.xs="column">
-    <!-- Single "Responsive" Card-->
-    <div fxFlex [style.margin]="'20px'" *ngFor="let release of releases">
-      <mat-card [style.min-width]="'200px'">
-        <mat-card-header>
-          <mat-card-title>{{ release.name }}</mat-card-title>
-          <mat-card-subtitle>New Release</mat-card-subtitle>
-        </mat-card-header>
-
-        <img
-          mat-card-image
-          class="album-cover"
-          src="{{ release.images[0].url }}"
-          alt="album art"
-          routerLink="/album"
-        />
-
-        <strong>Release Date: </strong>{{ release.release_date | date: "M/d/yy"
-        }}<br />
-        <strong>Tracks: </strong>{{ release.total_tracks }}<br /><br />
-        <mat-card-content *ngFor="let artist of release.artists">
-          <mat-chip-list aria-label="Artist selection">
-            <mat-chip routerLink="/artist">{{ artist.name }}</mat-chip>
-          </mat-chip-list>
-        </mat-card-content>
-      </mat-card>
+</p>
+<div>
+  <div class="content">
+    <div fxLayout="row wrap" fxLayout.xs="column">
+      <!-- Single "Responsive" Card-->
+      <div *ngFor="let release of releases" fxFlex [style.margin]="'20px'">
+        <mat-card [style.min-width]="'200px'">
+          <mat-card-header>
+            <mat-card-title>{{ release.name }}</mat-card-title>
+            <mat-card-subtitle>New Release</mat-card-subtitle>
+          </mat-card-header>
+          <img
+            mat-card-image
+            class="album-cover"
+            src="{{ release.images[0].url }}"
+            alt="album art"
+            routerLink="/album"
+          />
+          <strong>Release Date: </strong
+          >{{ release.release_date | date: "M/d/yy" }}<br />
+          <strong>Tracks: </strong>{{ release.total_tracks }}<br /><br />
+          <mat-card-content *ngFor="let artist of release.artists">
+            <mat-chip-list aria-label="Artist selection">
+              <mat-chip routerLink="/artist">{{ artist.name }}</mat-chip>
+            </mat-chip-list>
+          </mat-card-content>
+        </mat-card>
+      </div>
+      <!-- -->
     </div>
-    <!-- -->
   </div>
 </div>
