--- a/src/app/not-found/not-found.component.html
+++ b/src/app/not-found/not-found.component.html
@@ -1,2 +1,2 @@
-<h1>404</h1>
-<p>Resource Not Found...</p>
+<h1>Resource Not Found</h1>
+<p>I'm sorry, but we can't seem to find what you're looking for...</p>
