--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -42,24 +42,35 @@
         <div>
           <mat-form-field appearance="fill">
             <mat-label>Artist</mat-label>
-            <input matInput type="text" />
+            <form (ngSubmit)="handleSearch($event)">
+              <input
+                matInput
+                type="text"
+                name="searchString"
+                [(ngModel)]="searchString"
+              />
+            </form>
             <mat-icon matSuffix>search</mat-icon>
           </mat-form-field>
         </div>
 
-        <a mat-list-item routerLink="/newReleases">
+        <a mat-list-item [routerLink]="['/newReleases']">
           <mat-icon mat-list-icon> library_music </mat-icon>
           <p mat-line>New Releases</p>
         </a>
 
-        <a mat-list-item>
+        <a
+          mat-list-item
+          routerLinkActive="active"
+          [routerLink]="['/favourites']"
+        >
           <mat-icon mat-list-icon> favorite </mat-icon>
           <p mat-line>Favourites</p>
         </a>
 
         <mat-divider></mat-divider>
 
-        <a id="push-bottom" mat-list-item routerLink="/about">
+        <a id="push-bottom" mat-list-item [routerLink]="['/about']">
           <mat-icon mat-list-icon> info_outline </mat-icon>
           <p mat-line>About</p>
         </a>
