--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
 <div class="navbar-container">
   <!-- Top navbar -->
   <mat-toolbar class="navbar" color="primary">
-    <button mat-icon-button (click)="snav.toggle()">
+    <button mat-icon-button (click)="snav.toggle()" *ngIf="token">
       <mat-icon>menu</mat-icon>
     </button>
 
@@ -12,9 +12,9 @@
 
     <span class="navbar-spacer"></span>
 
-    <button mat-button [matMenuTriggerFor]="userMenu">
+    <button mat-button [matMenuTriggerFor]="userMenu" *ngIf="token">
       <mat-icon>person</mat-icon>
-      <span fxShow fxHide.xs> Haeun Kim </span>
+      <span fxShow fxHide.xs> {{ token.userName }} </span>
     </button>
     <mat-menu
       #userMenu="matMenu"
@@ -22,7 +22,7 @@
       yPosition="above"
       [overlapTrigger]="false"
     >
-      <a mat-menu-item>
+      <a mat-menu-item (click)="logout()">
         <mat-icon>exit_to_app</mat-icon>
         <span>Log out</span>
       </a>
@@ -33,7 +33,7 @@
     <!-- Side nav -->
     <mat-sidenav
       #snav
-      [opened]="false"
+      [opened]="token && snav.opened"
       [mode]="'side'"
       [fixedInViewport]="true"
       fixedTopGap="56"
